@@ -8,6 +8,9 @@ Zope Changes
 
    Bugs fixed
 
+      - Launchpad #245649:  the Products package is now a proper
+        "namespace package" under the rules specified by setuptools.
+
       - Launchpad #239636:  Ensure that HEAD requests lock an empty body
         for NotFound errors.
 
